--- a/DetalleCotizaciones/Views/Cotizaciones/Delete.cshtml
+++ b/DetalleCotizaciones/Views/Cotizaciones/Delete.cshtml
@@ -1,43 +1,34 @@
 ﻿@model DetalleCotizaciones.Models.Cotizaciones
-
 @{
     ViewBag.Title = "Delete";
 }
-
 <h2>Delete</h2>
-
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Cotizaciones</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Cliente.Nombres)
+            @Html.DisplayNameFor(model => model.Cliente)
         </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.Cliente.Nombres)
+            @Html.DisplayFor(model => model.Cliente)
         </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Fecha)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Fecha)
         </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Monto)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Monto)
         </dd>
-
     </dl>
-
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
