--- a/DetalleCotizaciones/Views/Cotizaciones/Index.cshtml
+++ b/DetalleCotizaciones/Views/Cotizaciones/Index.cshtml
@@ -1,18 +1,15 @@
 ﻿@model IEnumerable<DetalleCotizaciones.Models.Cotizaciones>
-
 @{
     ViewBag.Title = "Index";
 }
-
 <h2>Index</h2>
-
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Cliente.Nombres)
+            @Html.DisplayNameFor(model => model.Cliente)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Fecha)
@@ -22,24 +19,23 @@
         </th>
         <th></th>
     </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Cliente.Nombres)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Fecha)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Monto)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CotizacionId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CotizacionId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CotizacionId })
-        </td>
-    </tr>
-}
-
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cliente)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Fecha)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Monto)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.CotizacionId }) |
+                @Html.ActionLink("Details", "Details", new { id = item.CotizacionId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.CotizacionId })
+            </td>
+        </tr>
+    }
 </table>
